<resources>
    <string name="app_name">carDeal</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account ?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number (Without +91)</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="buy_car">Buy Car</string>
    <string name="sell_car">Sell Car</string>
    <string name="car_information">Car Info</string>
    <string name="sign_up_with">Sign Up with</string>
    <string name="select_detail_of_your_car">Fill Details of Your Car</string>
    <string name="select_car_brand">Select Car Brand</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="variant">Variant</string>
    <string name="manufacture_year">Manufacture Year</string>
    <string name="state">State</string>
    <string name="type">Type</string>
    <string name="number_of_owners">Number Of Owners</string>
    <string name="color">Color</string>
    <string name="kilometers_driven">Kilometers Driven</string>
    <string name="transmission">Transmission</string>
    <string name="fill_your_details">Fill your Details</string>
    <string name="address">Address</string>
    <string name="done">Done</string>
    <string name="sample_text">Sample Text</string>
    <string name="car_name">Car Name</string>
    <string name="car_price">Car Price</string>
    <string name="select_car">Select Car</string>
    <string name="home_page">Home</string>
    <string name="log_out">Log Out</string>
    <string name="account">Account</string>
    <string name="insurance">Insurance</string>
    <string name="expected_price">Expected Price</string>
    <string name="my_cars">My Cars</string>
    <string name="location">Location</string>
    <string name="city">City</string>
    <string name="call_seller">Call Seller</string>
    <string name="sms_seller">SMS seller</string>
    <string name="send_details_of_seller">Send Details of Seller</string>
    <string name="owner_details">Owner Details</string>
    <string name="call_owner">Call Owner</string>
    <string name="msg_owner">Msg Owner</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="enter_images_of_your_car">Enter Images of Your Car</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brands">Brands</string>
    <string name="maruti_nsuzuki">Maruti \nSuzuki</string>
    <string name="hyundai">Hyundai</string>
    <string name="tata">Tata</string>
    <string name="recommended_cars">Recommended Cars</string>
    <string name="volvo">Volvo</string>
    <string name="mg">MG</string>
    <string name="mercedes">Mercedes</string>
    <string name="audi">Audi</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="details">Details</string>
    <string name="specifications">Specifications</string>
    <string name="price_range">Price Range</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="body_type">Body Type</string>
    <string name="engine">Engine (cc)</string>
    <string name="mileage">Mileage (kmpl)</string>
    <string name="seating_capacity">Seating Capacity</string>
    <string name="fuel_capacity">Fuel Capacity (litres)</string>
    <string name="length_mm">Length (mm)</string>
    <string name="width_mm">Width (mm)</string>
    <string name="height_mm">Height (mm)</string>
    <string name="car_type"> Car Type</string>
    <string name="purchase">Purchase</string>
    <string name="view_all">View all</string>
    <string name="details_of_cars_are_this">Details of cars are this</string>
    <string name="car_company">Car Company</string>
    <string name="select_brand_of_your_car">Select Brand Of Your Car</string>
    <string name="registered_state">Registered State</string>
    <string name="registered_city">Registered City</string>
    <string name="my_profile">My Profile</string>
    <string name="mycars">My Cars</string>
    <string name="about_us">About App</string>
    <string name="price">Price</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="old_password">Old Password</string>
    <string name="capture_image">Capture Image</string>
    <string name="test_drive">Test Drive</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="confirm_details">Confirm Details</string>
    <string name="enter_data">Enter Data</string>
    <string name="remove">Remove Car</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="my_test_drive">My Test Drive</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="cancel_test_drive">Cancel Test Drive</string>
    <string name="reschedule">Reschedule</string>
    <string name="change_password">Change Password</string>
</resources>