<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LoginActivity">

     <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/logo"
        />
     <View
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@id/logo"
        android:id="@+id/view"/>

     <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="16dp"
        android:padding="18dp"
        android:hint="@string/email_address"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:minLines="1"
        />

     <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailAddress"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="password"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="16dp"
        android:padding="18dp"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_view"
        android:minLines="1"
        />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="11dp"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_alignParentEnd="true"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/txt2"
            android:id="@+id/view2"/>

        <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:hint="@string/login"
        android:background="@drawable/btn_bg"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/view2"/>

     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt3"
        android:layout_below="@id/btnLogin"
        android:textColor="@color/black"
        android:text="@string/create_account"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt1_login"
        android:layout_toEndOf="@id/txt3"
        android:layout_below="@id/btnLogin"
        android:textColor="@color/blue_btn"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        />

    </RelativeLayout>
