<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnCalenderView"
            android:src="@drawable/ic_calendar"
            android:layout_gravity="center"
            android:padding="16dp"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtDate"
            android:hint="@string/select_date"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnTimePicker"
            android:src="@drawable/ic_time"
            android:layout_gravity="center"
            android:padding="16dp"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtTime"
            android:hint="@string/select_time"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            android:layout_gravity="center"
            android:padding="16dp"
            tools:ignore="ContentDescription" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtAddressPopUp"
            android:lines="6"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:hint="@string/enter_your_address"
            android:gravity="top" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone_big"
            android:layout_gravity="center"
            android:padding="16dp"
            tools:ignore="ContentDescription" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtPhoneNumber"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:hint="@string/phone_number"
            android:gravity="top"
            android:maxLength="12"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmPopUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/btn_bg"
        android:hint="@string/confirm_details"
        android:textColorHint="@color/white"
        />
</LinearLayout>