<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BuySpecificationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:paddingBottom="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtViewPrice"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:padding="16dp"
                android:textSize="18sp"
                android:gravity="start"
                android:textColor="@color/app_theme"/>

            <TextView
                android:id="@+id/Price"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="16dp"
                android:text="@string/car_price"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtViewYear"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/manufacture_year"
                android:padding="16dp"
                android:textSize="18sp"
                android:gravity="start"
                android:textColor="@color/app_theme"/>

            <TextView
                android:id="@+id/Model"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="16dp"
                android:text="@string/car_price"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtViewColor"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:padding="16dp"
                android:textSize="18sp"
                android:gravity="start"
                android:textColor="@color/app_theme"/>

            <TextView
                android:id="@+id/txtColor"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="16dp"
                android:text="@string/car_price"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtViewKms"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/kilometers_driven"
                android:padding="16dp"
                android:textSize="18sp"
                android:gravity="start"
                android:textColor="@color/app_theme"/>

            <TextView
                android:id="@+id/txtKms"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="16dp"
                android:text="@string/car_price"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtViewTransmission"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/transmission"
                android:padding="16dp"
                android:textSize="18sp"
                android:gravity="start"
                android:textColor="@color/app_theme"/>

            <TextView
                android:id="@+id/txtTransmission"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="16dp"
                android:text="@string/car_price"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtViewFuel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fuel_type"
                android:padding="16dp"
                android:textSize="18sp"
                android:gravity="start"
                android:textColor="@color/app_theme"/>

            <TextView
                android:id="@+id/txtFuelType"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="16dp"
                android:text="@string/car_price"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtViewOwners"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/number_of_owners"
                android:padding="16dp"
                android:textSize="18sp"
                android:gravity="start"
                android:textColor="@color/app_theme"/>

            <TextView
                android:id="@+id/txtOwners"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="16dp"
                android:text="@string/car_price"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtViewInsurance"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/insurance"
                android:padding="16dp"
                android:textSize="18sp"
                android:gravity="start"
                android:textColor="@color/app_theme"/>

            <TextView
                android:id="@+id/txtInsurance"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="16dp"
                android:text="@string/car_price"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>